--- a/css_practice/master.css
+++ b/css_practice/master.css
@@ -23,9 +23,16 @@ div
     background-color: aliceblue;
     padding: 10px;
     margin: 10px;
-    width: 300px;
+    width: fit-content;
+    max-width: 300px;
     height: 30px;
-
+    overflow: auto;
+    text-shadow: 1px 1px 4px rgb(54, 114, 174);
+    text-align: center;
+    direction: ltr;
+    text-decoration: underline;
+    text-decoration-color: chocolate;
+    text-transform: capitalize ;
 }
 
 /* span
@@ -39,7 +46,7 @@ div
 
 span
 {
-    background-color: aqua;
+    background-color: rgb(64, 90, 90);
     display: inline-block;
     padding: 10px;
     margin: 10px;
@@ -51,4 +58,42 @@ span
 {
     visibility: hidden;
     /* display: none; */
+}
+
+.first_div
+{
+    background-color:rgb(143, 229, 143);
+    border-bottom: 2px solid crimson;
+    color: crimson;
+}
+
+.second_div
+{
+    background-color:rgb(170, 143, 229);
+    border-bottom: 2px solid rgb(124, 64, 76);
+    color: rgb(124, 64, 76);
+}
+
+.third_div
+{
+    background-color:rgb(143, 179, 229);
+    border-bottom: 2px solid rgb(64, 122, 124);
+    color: rgb(64, 122, 124);
+}
+
+.forth_div
+{
+    background-color:rgb(230, 234, 107);
+    border-bottom: 2px solid rgb(122, 124, 64);
+    color: rgb(122, 124, 64);
+
+}
+
+.first_div,
+.second_div,
+.third_div,
+.forth_div
+{
+    margin: 12px 0px;
+    padding: 10px 0px;
 }
